1) move interceptors to separate class 2) added styled error message block to home page

--- a/TodoApp/src/main/resources/static/webapp/index.html
+++ b/TodoApp/src/main/resources/static/webapp/index.html
@@ -26,6 +26,8 @@
 <script type="text/javascript" src="./util/HttpService.js"></script>
 <script type="text/javascript" src="./util/AppConstants.js"></script>
 <script type="text/javascript" src="./util/Services.js"></script>
+<script type="text/javascript" src="./util/Interceptors.js"></script>
+
 </head>
 <body ng-app="todoapp" class="overflow-auto">
 	<div class="spinner" ng-show="isLoading">
