--- a/TodoApp/src/main/resources/static/webapp/resources/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/resources/pages/root/home.html
@@ -1,8 +1,10 @@
 <div class="container">
 	<div class="row">
+		<div ng-if="errorMessage" class="col-xs-12 text-red padding-1em text-center border-solid-red back-dirt-white">
+			<p>{{errorMessage}}</p>
+		</div>
 		<div class="col-xs-12">
 			<h1>Admin login</h1>
-
 			<label for="adminLogin">Login:</label>
 			<input type="text" id="adminLogin" ng-Model="data.username"></input>
 			<br>
