1) created unauthenticated page; 2) created refresh token method (but not used yet);

--- a/TodoApp/src/main/resources/static/webapp/index.html
+++ b/TodoApp/src/main/resources/static/webapp/index.html
@@ -7,6 +7,7 @@
       
 <link rel="stylesheet" type="text/css" href="./resources/libs/bower_components/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="./resources/styles/style.css">
+<script type="text/javascript" src="./resources/scripts/script.js"></script>
 
 <script type="text/javascript" src="./resources/libs/bower_components/jquery/dist/jquery.min.js"></script>
 <script type="text/javascript" src="./resources/libs/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
@@ -22,6 +23,7 @@
 <script type="text/javascript" src="./controllers/root/App.js"></script>
 <script type="text/javascript" src="./controllers/root/UiRouting.js"></script>
 <script type="text/javascript" src="./controllers/root/HomeController.js"></script>
+<script type="text/javascript" src="./controllers/root/UnauthorizedController.js"></script>
 
 <script type="text/javascript" src="./util/HttpService.js"></script>
 <script type="text/javascript" src="./util/AppConstants.js"></script>
