--- a/TodoApp/src/main/resources/static/webapp/resources/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/resources/pages/root/home.html
@@ -15,7 +15,9 @@
 		</div>
 		<br>
 		<div class="col-xs-12">
-			<button ng-click="securedPage()">Secured Page</button>
+			<a href="#/secured">
+				<button>Secured Page</button>
+			</a>
 		</div>
 		<br>
 		<div class="col-xs-12">
@@ -23,6 +25,11 @@
 			<br>
 			<span>{{securedApiResponse}}</span>
 		</div>
+		<!--
+		<div class="col-xs-12">
+			<button ng-click="refreshToken()">Refresh token</button>
+		</div>
+		-->
 		<br>
 	</div>
 </div>
