--- a/TodoApp/src/main/resources/static/webapp/index.html
+++ b/TodoApp/src/main/resources/static/webapp/index.html
@@ -15,8 +15,13 @@
 <script type="text/javascript" src="./resources/libs/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script type="text/javascript" src="./resources/libs/bower_components/angular-resource/angular-resource.min.js"></script>
 <script type="text/javascript" src="./resources/libs/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-<script type="text/javascript" src="./resources/libs/manual/ocLazyLoad.js"></script>
+<script type="text/javascript" src="./resources/libs/manual/ocLazyLoad/ocLazyLoad.js"></script>
 
+<link rel="stylesheet" type="text/css" href="./resources/libs/manual/sweetalert/sweetalert.min.css" />
+<link rel="stylesheet" type="text/css" href="./resources/libs/manual/toaster/toaster.min.css" />
+<script type="text/javascript" src="./resources/libs/manual/sweetalert/sweetalert.min.js"></script>
+<script type="text/javascript" src="./resources/libs/manual/toaster/toaster.min.js"></script>
+<script type="text/javascript" src="./resources/libs/manual/parsley/parsley.min.js"></script>
 
 <script type="text/javascript" src="./resources/libs/bower_components/angular-cookies/angular-cookies.min.js"></script>
 
@@ -32,6 +37,7 @@
 
 </head>
 <body ng-app="todoapp" class="overflow-auto">
+	<toaster-container toaster-options="{'time-out': 5000}"></toaster-container>
 	<div class="spinner" ng-show="isLoading">
 		<img src="./resources/images/loading_grey.gif" class="ajax-loader" />
 	</div>
