--- a/TodoApp/src/main/resources/static/webapp/resources/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/resources/pages/root/home.html
@@ -60,11 +60,9 @@
 			<br>
 			<span>{{securedApiResponse}}</span>
 		</div>
-		<!--
 		<div class="col-xs-12">
-			<button ng-click="refreshToken()">Refresh token</button>
+			<button ng-click="showAlert()">Show alert</button>
 		</div>
-		-->
 		<br>
 	</div>
 </div>
