--- a/TodoApp/src/main/resources/static/webapp/admin/index.html
+++ b/TodoApp/src/main/resources/static/webapp/admin/index.html
@@ -4,7 +4,7 @@
 <!-- 
  <link rel="icon" href="../common/resources/images/g.ico">
 -->
-      
+<title>Admin Portal</title>      
 <link rel="stylesheet" type="text/css" href="../common/resources/libs/bower_components/bootstrap/dist/css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="../common/resources/styles/style.css">
 <script type="text/javascript" src="../common/resources/scripts/script.js"></script>
