--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
@@ -14,11 +14,13 @@
 				<form name="customerForm" id="customerForm" data-parsley-valitade>
 					<div class="col-xs-5 no-padding-right">
 							<input type="text" class="form-control" ng-Model="customer.username" placeholder="username"
-								   pattern="[a-zA-Z\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
+								   ng-init="customer.username = 'user01'"
+								   pattern="[a-zA-Z0-9\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
 					</div>
 					<div class="col-xs-5 no-padding-left no-padding-right">
 							<input type="password" class="form-control" ng-Model="customer.password" placeholder="password" 
-								   pattern="[a-zA-Z\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
+								   ng-init="customer.password = 'user'"
+								   pattern="[a-zA-Z0-9\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
 					</div>
 					<div class="col-xs-2 no-padding-left padding-left-02em">
 							<a class="btn btn-success" ng-click="doLogin(customer, 'customerForm')"><span class="glyphicon glyphicon-log-in"></span></a>
