complete separating customer and admin

--- a/TodoApp/src/main/resources/static/webapp/admin/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/admin/pages/root/home.html
@@ -14,7 +14,7 @@
 				<form name="adminForm" id="adminForm" data-parsley-valitade>
 					<div class="col-xs-5 no-padding-right">
 							<input type="text" class="form-control" ng-Model="admin.username" placeholder="username" 
-								   ng-init="admin.username = 'immortal'"
+								   ng-init="admin.username = 'admin'"
 								   pattern="[a-zA-Z0-9\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
 					</div>
 					<div class="col-xs-5 no-padding-left no-padding-right">
