--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
@@ -7,7 +7,7 @@
 	
 	<div class="row">
 		<div class="col-xs-12 col-sm-6">
-			<div class="row">
+			<div class="row" ng-hide="profile">
 				<div class="col-xs-12">
 					<h4>Customer</h4>
 				</div>
@@ -26,6 +26,18 @@
 							<a class="btn btn-success" ng-click="doLogin(customer, 'customerForm')"><span class="glyphicon glyphicon-log-in"></span></a>
 					</div>
 				</form>
+			</div>
+			<div class="row" ng-show="profile">
+				<div class="col-xs-12">
+					<h4>Customer session</h4>
+				</div>
+				<div class="col-xs-10 no-padding-right">
+						<h5>Welcome, {{profile.email}}</h5>
+				</div>
+
+				<div class="col-xs-2 no-padding-left padding-left-02em">
+						<a class="btn btn-danger" ng-click="logout();"><span class="glyphicon glyphicon-log-out"></span></a>
+				</div>
 			</div>
 		</div>
 	</div>
