--- a/TodoApp/src/main/resources/static/webapp/admin/index.html
+++ b/TodoApp/src/main/resources/static/webapp/admin/index.html
@@ -5,12 +5,12 @@
  <link rel="icon" href="../common/resources/images/g.ico">
 -->
 <title>Admin Portal</title>      
-<link rel="stylesheet" type="text/css" href="../common/resources/libs/bower_components/bootstrap/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous"> <!-- old version 3 <link rel="stylesheet" type="text/css" href="../common/resources/libs/bower_components/bootstrap/dist/css/bootstrap.min.css" /> -->
 <link rel="stylesheet" type="text/css" href="../common/resources/styles/style.css">
 <script type="text/javascript" src="../common/resources/scripts/script.js"></script>
 
 <script type="text/javascript" src="../common/resources/libs/bower_components/jquery/dist/jquery.min.js"></script>
-<script type="text/javascript" src="../common/resources/libs/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script> <!-- old version 3 <script type="text/javascript" src="../common/resources/libs/bower_components/bootstrap/dist/js/bootstrap.min.js"></script> -->
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular/angular.js"></script>
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular-resource/angular-resource.min.js"></script>
