--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
@@ -1,61 +1,64 @@
 <div class="container">
 	<div class="row">
-		<div ng-if="errorMessage" class="col-xs-12 text-red padding-1em text-center border-solid-red back-dirt-white">
+		<div ng-if="errorMessage" class="col-12 text-red padding-1em text-center border-solid-red back-dirt-white">
 			<p>{{errorMessage}}</p>
 		</div>
 	</div>
 	
-	<div class="row">
-		<div class="col-xs-12 col-sm-6">
-			<div class="row" ng-hide="profile">
-				<div class="col-xs-12">
+	<div class="row" ng-hide="profile">
+		<div class="col-12 col-md-6" >
+			<div class="row">
+				<div class="col-12">
 					<h4>Customer</h4>
 				</div>
-				<form name="customerForm" id="customerForm" data-parsley-valitade>
-					<div class="col-xs-5 no-padding-right">
-							<input type="text" class="form-control" ng-Model="customer.username" placeholder="username"
-								   ng-init="customer.username = 'user01'"
-								   pattern="[a-zA-Z0-9\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
-					</div>
-					<div class="col-xs-5 no-padding-left no-padding-right">
-							<input type="password" class="form-control" ng-Model="customer.password" placeholder="password" 
-								   ng-init="customer.password = 'user'"
-								   pattern="[a-zA-Z0-9\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
-					</div>
-					<div class="col-xs-2 no-padding-left padding-left-02em">
-							<a class="btn btn-success" ng-click="doLogin(customer, 'customerForm')"><span class="glyphicon glyphicon-log-in"></span></a>
+				<form name="customerForm" id="customerForm" class="col-12" data-parsley-valitade>
+					<div class="row">
+						<div class="col-5 no-padding-right">
+								<input type="text" class="form-control" ng-Model="customer.username" placeholder="username"
+									   ng-init="customer.username = 'user01'"
+									   pattern="[a-zA-Z0-9\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
+						</div>
+						<div class="col-5 no-padding-left no-padding-right">
+								<input type="password" class="form-control" ng-Model="customer.password" placeholder="password" 
+									   ng-init="customer.password = 'user'"
+									   pattern="[a-zA-Z0-9\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
+						</div>
+						<div class="col-2 no-padding-left padding-left-02em">
+								<button type="button" class="btn btn-outline-success" ng-click="doLogin(customer, 'customerForm')">Sign in</button>
+						</div>
 					</div>
 				</form>
 			</div>
-			<div class="row" ng-show="profile">
-				<div class="col-xs-12">
-					<h4>Customer session</h4>
-				</div>
-				<div class="col-xs-10 no-padding-right">
-						<h5>Welcome, {{profile.email}}</h5>
-				</div>
-
-				<div class="col-xs-2 no-padding-left padding-left-02em">
-						<a class="btn btn-danger" ng-click="logout();"><span class="glyphicon glyphicon-log-out"></span></a>
-				</div>
-			</div>
 		</div>
 	</div>
+
+	<div class="row" ng-show="profile">
+		<div class="col-12">
+			<h4>Customer session</h4>
+		</div>
+		
+		<div class="col-12 no-padding-right float-right">
+			<p class="float-left"><i>Welcome, {{profile.email}}</i></p>
+			<button type="button" class="btn btn-outline-secondary float-right" ng-click="logout();">Sign out</button>
+		</div>
+	</div>
+	
 	<hr>
+	
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-12">
 			<a href="#/secured">
-				<button>Secured Page</button>
+				<button type="button" class="btn btn-outline-danger">Secured Page</button>
 			</a>
 		</div>
 		<br>
-		<div class="col-xs-12">
-			<button ng-click="securedApi()">Secured API</button>
+		<div class="col-12">
+			<button type="button" class="btn btn-outline-warning" ng-click="securedApi()">Secured API</button>
 			<br>
 			<span>{{securedApiResponse}}</span>
 		</div>
-		<div class="col-xs-12">
-			<button ng-click="showAlert()">Show alert</button>
+		<div class="col-12">
+			<button type="button" class="btn btn-outline-info" ng-click="showAlert()">Show alert</button>
 		</div>
 		<br>
 	</div>
