Create customer Navbar

--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
@@ -1,3 +1,56 @@
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">
+  	<img alt="ToDo App" title="ToDo App" width="30" height="30" class="logo-todo-30px d-inline-block align-top"">
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+    	<li class="nav-item active">
+        	<a class="nav-link" href="#">Home</a>
+      	</li>
+    	<li class="nav-item active">
+        	<a class="nav-link" href="#">Features</a>
+      	</li><li class="nav-item active">
+        	<a class="nav-link" href="#">Contact us</a>
+      	</li>
+    
+      <!-- save for future usage
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>
+      -->
+      
+    </ul>
+    <span class="d-block d-lg-inline-block">
+        <div class="px-0 py-2 m-0">
+          <a class="text-bold text-white no-underline" href="#/sign-in">Sign in</a>
+            <span class="text-gray">or</span>
+            <a class="text-bold text-white no-underline" href="/join?source=header-home">Sign up</a>
+        </div>
+    </span>
+  </div>
+</nav>
+
 <div class="container">
 	<div class="row">
 		<div ng-if="errorMessage" class="col-12 text-red padding-1em text-center border-solid-red back-dirt-white">
