Home screen text

--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
@@ -113,9 +113,9 @@
 
 	<div class="container-lg p-responsive position-relative py-5">
 		<div class="row">
-			<div class="col-md-7 text-center text-md-left bg-success">
-				<h1>Built for developers</h1>
-				<p>GitHub is a development platform inspired by the way you work. From open source to business, you can host and review code, manage projects, and build software alongside millions of other developers.</p>
+			<div class="col-md-7 text-center text-md-left">
+				<h1 class="font-weight-light text-white font-4rem">Built for tasks management</h1>
+				<p class="font-weight-light font-1_7rem">TodoApp is a tasks management platform helps many people to manage time more efficiently. All you tasks are saved in our account in Cloud base system, you can access them from anywhere: web, iOS and Android Apps.</p>
 			</div>
 			
 			
