Sign up styling in home page

--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
@@ -120,8 +120,8 @@
 			
 			
 			<!-- Quick Sign up -->
-			<div class="col-sm-12 col-md-5">
-				<div class="rounded-1 text-gray bg-gray-light py-4 px-4 px-md-3 px-lg-4">
+			<div class="col-sm-12 col-md-5 px-sm-5 px-md-3">
+				<div class="rounded-2 text-gray bg-gray-light py-4 px-4 px-md-3 px-lg-4">
 					<form class="needs-validation" novalidate ng-submit="signUp($event);">
 						<div class="form-row align-items-center">
 							<div class="col-12">
