--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
@@ -115,7 +115,7 @@
 		<div class="row">
 			<div class="col-md-7 text-center text-md-left">
 				<h1 class="font-weight-light text-white font-4rem">Built for tasks management</h1>
-				<p class="font-weight-light font-1_7rem">TodoApp is a tasks management platform helps many people to manage time more efficiently. All you tasks are saved in our account in Cloud base system, you can access them from anywhere: web, iOS and Android Apps.</p>
+				<p class="font-weight-light font-1_7rem">TodoApp is a tasks management platform helps many people to manage time more efficiently. All your tasks are saved in your account in Cloud base system, you can access them from anywhere: web, iOS and Android Apps.</p>
 			</div>
 			
 			
@@ -187,10 +187,17 @@
 			</div>	
 		</div>
 	</div>
-	
+</div>
+<div class="container my-5">
+	Features Section
 </div>
 
-<div class="container mt-5">
+<hr>
+<div class="container my-5">
+	Contact Us Section
+</div>
+<hr>
+<div class="container my-5">
 	<div class="row">
 		<div ng-if="errorMessage" class="col-12 text-red padding-1em text-center border-solid-red back-dirt-white">
 			<p>{{errorMessage}}</p>
@@ -256,7 +263,7 @@
 	</div>
 </div>
 
-<footer class="page-footer font-small pt-4 mt-4 stylish-color-dark">
+<footer class="page-footer font-small pt-4 mt-4 bg-dark">
 
     <!--Footer Links-->
     <div class="container text-center text-md-left">
