1) sign-in page 2) initial dashboard 3) cleaned up home page

--- a/TodoApp/src/main/resources/static/webapp/customer/index.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/index.html
@@ -34,6 +34,7 @@
 <script type="text/javascript" src="../common/controllers/root/App.js"></script>
 <script type="text/javascript" src="./controllers/root/UiRouting.js"></script>
 <script type="text/javascript" src="./controllers/root/HomeController.js"></script>
+<script type="text/javascript" src="./controllers/root/sign-in/SignInController.js"></script>
 <script type="text/javascript" src="../common/controllers/root/UnauthorizedController.js"></script>
 
 <script type="text/javascript" src="../common/util/HttpService.js"></script>
