--- a/TodoApp/src/main/resources/static/webapp/admin/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/admin/pages/root/home.html
@@ -24,7 +24,7 @@
 									   pattern="[a-zA-Z0-9\.\-\s]{1,30}" maxlength="30" data-parsley-error-message="Invalid characters. Max 30 allowed." data-parsley-trigger="change" required>
 						</div>
 						<div class="col-2 no-padding-left padding-left-02em">
-								<button type="button" class="btn btn-success" ng-click="doLogin(admin, 'adminForm')">Sign in</button>
+								<button type="button" class="btn btn-success" ng-click="doSignIn(admin, 'adminForm')">Sign in</button>
 						</div>
 					</div>
 				</form>
