Broke down home page to reusable components

--- a/TodoApp/src/main/resources/static/webapp/customer/pages/secure/dashboard/dashboard.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/secure/dashboard/dashboard.html
@@ -1,3 +1,5 @@
+<ng-include src="'./pages/root/navbar/navbar-home.html'"></ng-include>
+
 
 <h2>Secured zone!</h2>
 <h3>test: {{testAngular}}</h3>
@@ -40,3 +42,5 @@
 		<br>
 	</div>
 </div>
+
+<ng-include src="'./pages/root/footer/footer-home.html'"></ng-include>
