adjust side spacings between header/footer/content

--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/footer/footer-home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/footer/footer-home.html
@@ -7,8 +7,8 @@
         <div class="row text-center text-md-left mt-3 pb-3">
 
             <!--First column-->
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Company name</h6>
+            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3 pl-md-0">
+                <h6 class="text-uppercase mb-4 font-weight-600">Company name</h6>
                 <p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
             </div>
             <!--/.First column-->
@@ -17,7 +17,7 @@
 
             <!--Second column-->
             <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
+                <h6 class="text-uppercase mb-4 font-weight-600">Products</h6>
                 <p><a href="#!">MDBootstrap</a></p>
                 <p><a href="#!">MDWordPress</a></p>
                 <p><a href="#!">BrandFlow</a></p>
@@ -29,7 +29,7 @@
 
             <!--Third column-->
             <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Useful links</h6>
+                <h6 class="text-uppercase mb-4 font-weight-600">Useful links</h6>
                 <p><a href="#!">Your Account</a></p>
                 <p><a href="#!">Become an Affiliate</a></p>
                 <p><a href="#!">Shipping Rates</a></p>
@@ -40,12 +40,12 @@
             <hr class="w-100 clearfix d-md-none">
 
             <!--Fourth column-->
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-                <p><i class="fa fa-home mr-3"></i> New York, NY 10012, US</p>
-                <p><i class="fa fa-envelope mr-3"></i> info@gmail.com</p>
-                <p><i class="fa fa-phone mr-3"></i> + 01 234 567 88</p>
-                <p><i class="fa fa-print mr-3"></i> + 01 234 567 89</p>
+            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3 pr-md-0">
+                <h6 class="text-uppercase mb-4 font-weight-600">Contact</h6>
+                <p><i class="fa fa-home mr-3"></i> Vancouver, BC, Canada</p>
+                <p><i class="fa fa-envelope mr-3"></i> info@gatin.ca</p>
+                <p><i class="fa fa-phone mr-3"></i> + 1 (234) 567-8890</p>
+                <p><i class="fa fa-print mr-3"></i> + 1 (234) 567-8890</p>
             </div>
             <!--/.Fourth column-->
 
