--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/home.html
@@ -3,7 +3,7 @@
 
 <!-- Main section -->
 <div class="signup-home-back">
-	<div class="container-lg p-responsive position-relative py-5">
+	<div class="container position-relative py-5">
 		<div class="row">
 			<div class="col-md-7 text-center text-md-left">
 				<h1 class="font-weight-light text-white font-4rem">Built for tasks management</h1>
