--- a/TodoApp/src/main/resources/static/webapp/customer/pages/secure/navbar/navbar-dashboard.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/secure/navbar/navbar-dashboard.html
@@ -1,6 +1,6 @@
 <div class="width-full bg-dark">
-	<div class="container-lg p-responsive position-relative">
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+	<div class="container position-relative">
+		<nav class="navbar navbar-expand-md navbar-dark bg-dark px-0">
 		  <a class="navbar-brand" href="#">
 		  	<img alt="ToDo App" title="ToDo App" width="30" height="30" class="logo-todo-30px d-inline-block align-top"">
 		  </a>
