Signed in context menu left-right responsive

--- a/TodoApp/src/main/resources/static/webapp/customer/pages/secure/navbar/navbar-dashboard.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/secure/navbar/navbar-dashboard.html
@@ -50,7 +50,7 @@
 					    	<img ng-src="{{profile.avatar.thumbnail || '../common/resources/images/profile-placeholder.jpg'}}" alt="Renat Gatin" title="Renat Gatin" class="rounded" width="30" height="30">
 					    	<i class="fas fa-caret-down align-middle ml-1"></i>
 					  	</a>
-					  	<div class="dropdown-menu dropdown-menu-right">
+					  	<div class="dropdown-menu dropdown-menu-left-right-responsive">
 					    	<span class="dropdown-item disabled text-dark">Sighed in as<br><span class="font-weight-600">{{profile.email}}</span></span>
 					    	<div class="dropdown-divider"></div>
 					    	<button class="dropdown-item cursor-pointer" type="button">Your profile</button>
