--- a/TodoApp/src/main/resources/static/webapp/customer/pages/secure/navbar/navbar-dashboard.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/secure/navbar/navbar-dashboard.html
@@ -11,42 +11,32 @@
 		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		    <ul class="navbar-nav mr-auto">
 		    	<li class="nav-item active">
-		        	<a class="nav-link" href="#">Home</a>
+		        	<a class="nav-link" href="#/dashboard">Home</a>
 		      	</li>
-		    	<li class="nav-item active">
-		        	<a class="nav-link" href="#">Features</a>
-		      	</li><li class="nav-item active">
-		        	<a class="nav-link" href="#">Contact us</a>
+		      	<li class="nav-item dropdown">
+			        <a class="nav-link dropdown-toggle" href id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			        	Lists
+			        </a>
+			        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+			          	<a class="dropdown-item" href>List 1</a>
+			          	<a class="dropdown-item" href>List 2</a>
+			          	<a class="dropdown-item" href>List 3</a>
+			        </div>
+			    </li>
+			    <li class="nav-item">
+		        	<a class="nav-link" href="#/connections">Connections</a>
 		      	</li>
-		    
-		      <!-- save for future usage
-		      -->
-		      <li class="nav-item active">
-		        <a class="nav-link" href>Home <span class="sr-only">(current)</span></a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href>Link</a>
-		      </li>
-		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		          Dropdown
-		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href>Action</a>
-		          <a class="dropdown-item" href>Another action</a>
-		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href>Something else here</a>
-		        </div>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link disabled" href="#">Disabled</a>
-		      </li>
-		      
+		    	<li class="nav-item">
+		        	<a class="nav-link" href="#/features">Features</a>
+		      	</li>
+		      	<li class="nav-item">
+		        	<a class="nav-link" href="#/contactus">Contact us</a>
+		      	</li>
 		    </ul>
 		    <span class="d-block d-lg-inline-block">
 		        <div class="">
 		        	<div class="btn-group">
-		        		<a href class="text-light" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+		        		<a href class="text-light my-2 my-md-0" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					    	<img ng-src="{{profile.avatar.thumbnail || '../common/resources/images/profile-placeholder.jpg'}}" alt="Renat Gatin" title="Renat Gatin" class="rounded" width="30" height="30">
 					    	<i class="fas fa-caret-down align-middle ml-1"></i>
 					  	</a>
