Sign-up page - p1. Sign-in resturcture.

--- a/TodoApp/src/main/resources/static/webapp/customer/pages/root/navbar/navbar-home.html
+++ b/TodoApp/src/main/resources/static/webapp/customer/pages/root/navbar/navbar-home.html
@@ -47,7 +47,7 @@
 		        <div class="px-0 py-2 m-0">
 		          <a class="text-bold text-white no-underline" href="#/sign-in">Sign in</a>
 		            <span class="text-gray">or</span>
-		            <a class="text-bold text-white no-underline" href="/join?source=header-home">Sign up</a>
+		            <a class="text-bold text-white no-underline" href="#/sign-up">Sign up</a>
 		        </div>
 		    </span>
 		  </div>
