Icons to redirect to home.

--- a/TodoApp/src/main/webapp/customer/pages/root/sign-up/sign-up.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-up/sign-up.html
@@ -2,7 +2,9 @@
 
 <div class="div-sign-in text-center">
 	<form class="form-signin needs-validation" novalidate ng-submit="signIn($event);">
-		<img alt="ToDo App" title="ToDo App" width="72" height="72" class="mb-4 logo-todo-70px d-inline-block"">
+		<a href="#">
+			<img alt="ToDo App" title="ToDo App" width="72" height="72" class="mb-4 logo-todo-70px d-inline-block"">
+		</a>
 		<h3 class="mb-3 signin-form-header">Sign in to ToDoList</h3>
 		<div class="signin-form-body mt-3 min-width-18rem">
 			<div class="input-group">
