fix responsive UI in mobile device

--- a/TodoApp/src/main/webapp/customer/index.html
+++ b/TodoApp/src/main/webapp/customer/index.html
@@ -5,6 +5,7 @@
  <link rel="icon" href="../common/resources/images/g.ico">
 -->
 <title>Customer Portal</title> 
+<meta name="viewport" content="width=device-width, initial-scale=1">
      
 <!-- Bootstrap and its deps. -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
