upgrade FA fonts

--- a/TodoApp/src/main/webapp/customer/index.html
+++ b/TodoApp/src/main/webapp/customer/index.html
@@ -22,7 +22,10 @@
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular-resource/angular-resource.min.js"></script>
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script type="text/javascript" src="../common/resources/libs/bower_components/angular-ui-router-styles/ui-router-styles.js"></script>
-<link rel="stylesheet" type="text/css" href="../common/resources/libs/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css"/>
+
+<!-- Replace temporary with the one from CDN <link rel="stylesheet" type="text/css" href="../common/resources/libs/bower_components/font-awesome/web-fonts-with-css/css/fontawesome-all.min.css"/> -->
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+
 <script type="text/javascript" src="../common/resources/libs/manual/ocLazyLoad/ocLazyLoad.js"></script>
 
 <link rel="stylesheet" type="text/css" href="../common/resources/libs/manual/sweetalert/sweetalert.min.css" />
