Sign-up headers - steps

--- a/TodoApp/src/main/webapp/customer/pages/root/sign-in/sign-in.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-in/sign-in.html
@@ -31,7 +31,7 @@
 		</div>
 		<p class="create-account-callout mt-3 mb-0 font13">
 	        New to ToDoList?
-	        <a href="#" data-ga-click="Sign in, switch to sign up">Create an account</a>.
+	        <a href="#/sign-up" data-ga-click="Sign in, switch to sign up">Create an account</a>.
 	    </p>
 	    <p class="margin-top-min10px">
 	        <ul class="list-style-none d-flex flex-justify-center font12">
