--- a/TodoApp/src/main/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/home.html
@@ -63,13 +63,7 @@
 							        </div>
 								</div>
 							</div>
-							<div class="col-12">
-								<div class="form-check mb-4 mt-4">
-									<input class="form-check-input" type="checkbox" id="rememberMe"> 
-									<label class="form-check-label" for="rememberMe"> Remember me </label>
-								</div>
-							</div>
-							<div class="col-12">
+							<div class="col-12 mt-4">
 								<button type="submit" class="btn btn-success btn-large btn-block mb-2 p-2">Sign up for ToDo</button>
 							</div>
 						</div>
