sign-up header styling

--- a/TodoApp/src/main/webapp/customer/pages/root/sign-up/sign-up.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-up/sign-up.html
@@ -9,7 +9,7 @@
 			</div>
 			<div class="col-12">
 				<ol class="steps row m-0">
-					<li class="col-4 p-2" ng-class="{'current' : step  == 'create'}">
+					<li class="col-12 col-sm-4 p-2" ng-class="{'current' : step  == 'create'}">
 						<div class="d-flex justify-content-start">
 							<i class="fas fa-user-astronaut font25 pl-2 pr-3 pt-2 pb-3"></i>
 							<span>
@@ -19,7 +19,7 @@
 							</span>
 						</div>
 					</li>
-					<li class="col-4 p-2" ng-class="{'current' : step  == 'confirm'}">
+					<li class="col-12 col-sm-4 p-2" ng-class="{'current' : step  == 'confirm'}">
 						<div class="d-flex justify-content-start">
 							<i class="fas fa-at font25 pl-2 pr-3 pt-2 pb-3"></i>
 							<span>
@@ -29,7 +29,7 @@
 							</span>
 						</div>
 					</li>
-					<li class="col-4 p-2" ng-class="{'current' : step  == 'start'}">
+					<li class="col-12 col-sm-4 p-2" ng-class="{'current' : step  == 'start'}">
 						<div class="d-flex justify-content-start">
 							<i class="fas fa-clipboard-list font25 pl-2 pr-3 pt-2 pb-3"></i>
 							<span>
