--- a/TodoApp/src/main/webapp/customer/pages/root/sign-up/sign-up.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-up/sign-up.html
@@ -53,7 +53,7 @@
 									<div class="input-group-prepend">
 										<div class="input-group-text"><i class="fas fa-user"></i></div>
 									</div>
-									<input type="text" class="form-control col-sm-6 border-right-radius-5px" id="firstName" 
+									<input type="text" class="form-control col-sm-6 border-right-radius-5px" id="firstName" minlength="2" maxlength="20"
 										   placeholder="First Name" ng-model="signup.firstName" pattern="[a-zA-Z0-9\s'-,]{1,40}" required>
 								    <div class="invalid-tooltip font10">
 							        	First name is invalid
@@ -67,7 +67,7 @@
 									<div class="input-group-prepend">
 										<div class="input-group-text"><i class="fas fa-user"></i></div>
 									</div>
-									<input type="text" class="form-control col-sm-6 border-right-radius-5px" 
+									<input type="text" class="form-control col-sm-6 border-right-radius-5px" minlength="2" maxlength="20"
 										   id="lastName" ng-model="signup.lastName" placeholder="Last Name" required>
 									<div class="invalid-tooltip font10">
 							        	Last name is invalid
@@ -95,7 +95,7 @@
 									<div class="input-group-prepend">
 										<div class="input-group-text"><i class="fas fa-key"></i></div>
 									</div>
-									<input type="password" class="form-control col-sm-6 border-right-radius-5px" 
+									<input type="password" class="form-control col-sm-6 border-right-radius-5px" pattern=".{6,}"
 										   id="password" ng-model="signup.password" placeholder="Password" required>
 									<div class="invalid-tooltip font10">
 							        	Password is invalid
