--- a/TodoApp/src/main/webapp/customer/pages/root/home.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/home.html
@@ -21,7 +21,8 @@
 									<div class="input-group-prepend">
 										<div class="input-group-text"><i class="fas fa-user"></i></div>
 									</div>
-									<input type="text" class="form-control" id="firstName" placeholder="First Name" required>
+									<input type="text" class="form-control border-right-radius-5px" minlength="2" maxlength="20"
+									       id="firstName" ng-model="signup.firstName" pattern="[a-zA-Z0-9\s'-.]{2,20}" placeholder="First Name" required>
 								    <div class="invalid-tooltip font10">
 							        	First Name is required.
 							        </div>
@@ -33,19 +34,21 @@
 									<div class="input-group-prepend">
 										<div class="input-group-text"><i class="fas fa-user"></i></div>
 									</div>
-									<input type="text" class="form-control" id="lastName" placeholder="Last Name" required>
+									<input type="text" class="form-control border-right-radius-5px" minlength="2" maxlength="20" 
+									       id="lastName" ng-model="signup.lastName" pattern="[a-zA-Z0-9\s'-.]{2,20}" placeholder="Last Name" required>
 									<div class="invalid-tooltip font10">
 							        	Last Name is required.
 							        </div>
 								</div>
 							</div>
 							<div class="col-12">
-								<label for="username">Username</label>
+								<label for="email">Username</label>
 								<div class="input-group mb-2">
 									<div class="input-group-prepend">
 										<div class="input-group-text"><i class="fas fa-at"></i></div>
 									</div>
-									<input type="email" class="form-control" id="username" placeholder="sample@mail.com" required>
+									<input type="email" class="form-control border-right-radius-5px" id="email" 
+									       placeholder="sample@mail.com" ng-model="signup.email" required>
 									<div class="invalid-tooltip font10">
 							        	Valid and unique email is required. You will use it as username.
 							        </div>
@@ -57,9 +60,10 @@
 									<div class="input-group-prepend">
 										<div class="input-group-text"><i class="fas fa-key"></i></div>
 									</div>
-									<input type="password" class="form-control" id="password" placeholder="Password" required>
+									<input type="password" class="form-control border-right-radius-5px" pattern=".{6,}"
+						   				   id="password" ng-model="signup.password" placeholder="Password" required>
 									<div class="invalid-tooltip font10">
-							        	Password is required. Min 4 characters.
+							        	Password is required. Min 6 characters.
 							        </div>
 								</div>
 							</div>
