password reset - part1 (front-end implementation)

--- a/TodoApp/src/main/webapp/customer/pages/root/sign-in/sign-in.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-in/sign-in.html
@@ -8,15 +8,15 @@
 			<div class="input-group">
 				<label for="inputEmail" class="width-full text-left"><strong>Username</strong></label> 
 				<input type="email" id="inputEmail" ng-model="customer.username" ng-init="customer.username = 'user01@mail.me'" 
-					   class="form-control form-control-signin" placeholder="Email address" required autofocus> 
+					   class="form-control form-control-signin rounded" placeholder="Email address" required autofocus> 
 				<div class="invalid-tooltip font12">
 		        	Invalid email
 		        </div>
 			</div>
 	        <div class="input-group">
-				<label for="inputPassword" class="width-full text-left mt-3"><strong>Password</strong> <a href="#/password_reset" class="label-link">Forgot password?</a></label> 
+				<label for="inputPassword" class="width-full text-left mt-3"><strong>Password</strong> <a href="#/password-reset" class="label-link">Forgot password?</a></label> 
 				<input type="password" id="inputPassword" ng-model="customer.password" ng-init="customer.password = 'user'" 
-					   class="form-control form-control-signin" placeholder="Password" required>
+					   class="form-control form-control-signin rounded" placeholder="Password" required>
 		        <div class="invalid-tooltip font12">
 		        	Invalid password
 		        </div>
