--- a/TodoApp/src/main/webapp/customer/pages/root/sign-in/password-reset.html
+++ b/TodoApp/src/main/webapp/customer/pages/root/sign-in/password-reset.html
@@ -16,8 +16,8 @@
 			<button class="btn btn-success btn-block mt-3" type="submit">Send password reset email</button>
 		</div>
 		
-		<div class="signin-form-body mt-3 min-width-19rem">
-			<div class="auth-form-body mt-3" ng-show="sentSuccessfully">
+		<div class="signin-form-body mt-3 min-width-19rem" ng-show="sentSuccessfully">
+			<div class="auth-form-body mt-3">
 				<p class="mt-0">Check your email for a link to reset your
 					password. If it doesn’t appear within a few minutes, check your
 					spam folder.</p>
@@ -25,11 +25,11 @@
 			</div>
 		</div>
 		
-		<p class="create-account-callout mt-3 mb-0 font13 min-width-19rem">
+		<p class="create-account-callout mt-3 mb-0 font13 ">
 	        New to ToDoList?
 	        <a href="#/sign-up" data-ga-click="Sign in, switch to sign up">Create an account</a>.
 	    </p>
-	    <p class="margin-top-min10px min-width-19rem">
+	    <p class="margin-top-min10px">
 	        <ul class="list-style-none d-flex flex-justify-center font12">
 				<li class="mr-3"><a href="#" class="link-gray" data-ga-click="Footer, go to terms, text:terms">Terms</a></li>
 				<li class="mr-3"><a href="#" class="link-gray" data-ga-click="Footer, go to privacy, text:privacy">Privacy</a></li>
